a couple of minor changes

--- a/assignment-1.html
+++ b/assignment-1.html
@@ -52,7 +52,7 @@
             <h2>Due Dates</h2>
             <p>
                 <span class="due-date">Website: Monday, September 24th, 6:00pm.</span><br />
-                Please email Luis Blackaller with a link to a presentation webpage hosted in your Storm account. Every student should have their team&#39;s webpage hosted in their personal Storm site.
+                Please email Luis Blackaller with a link to the presentation webpage hosted in your Storm account. Every student should have their team&#39;s webpage hosted in their personal Storm site.
             <p>
             </p>
                 <span class="due-date">Presentation: Tuesday, September 25th, 4:00pm (In class).</span>
