a couple of minor changes 3

--- a/assignment-1.html
+++ b/assignment-1.html
@@ -34,8 +34,8 @@
 <body>
     <div id="wrapper">
         <div id="assignment">
-            <h1><a href="index.html">IML 400 Fall 2012</a></h1>
-            <h2>Assignment 1</h2>
+            <h2><a href="index.html">IML 400 Fall 2012</a></h2>
+            <h1>Assignment 1</h1>
         
             <p>
                 Research and 15 minute Presentation.<br />
@@ -51,7 +51,9 @@
         
             <h2>Due Dates</h2>
             <p>
-                <span class="due-date">Website: Monday, September 24th, 6:00pm.</span><br />
+                <span class="due-date">Web Page: Monday, September 24th, 6:00pm.</span>
+            <p>
+            </p>
                 Please email Luis Blackaller with a link to the presentation webpage hosted in your Storm account. Every student should have their team&#39;s webpage hosted in their personal Storm site.
             <p>
             </p>
