a couple of minor changes 4

--- a/assignment-1.html
+++ b/assignment-1.html
@@ -59,6 +59,9 @@
             </p>
                 <span class="due-date">Presentation: Tuesday, September 25th, 4:00pm (In class).</span>
             </p>
+            <p>
+                Presentations will be followed by a 20 minute discussion about the future of the web. Please come prepared to contribute. Meaningful contributions will improve your grades.
+            </p>
         </div>
     </div>
 </body>
