--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         </div>
 	    
 		<h1>Welcome to IML 400 Fall 2012</h1>
+		<h3>Lecturer <a href="http://blacklog.mitplw.com/" target="blank">Luis  Blackaller</a></h3>
 		<p>
 			<a href="assignment-1.html">Assignment 1</a>
 			<img src="images/robot.png" />
