a added syllabus file

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             Hello World!
         </div>
 	    
-		<h1>Welcome to IML 400 Fall 2012</h1>
+		<h1>Welcome to IML 400 Fall 2012 [ <a href="IML400-Fall2012-syllabus.pdf" target="blank">Syllabus</a> ]</h1>
 		<h3>Lecturer <a href="http://blacklog.mitplw.com/" target="blank">Luis  Blackaller</a></h3>
 		<p>
 			<a href="assignment-1.html">Assignment 1</a>
