--- a/tabs-1.html
+++ b/tabs-1.html
@@ -7,10 +7,10 @@
     <title>tab navigation 1</title>
     <meta name="author" content="Luis Blackaller">
     <!-- Date: 2012-09-24 -->
-    <!--
+    <!-- this is how you link to an external CSS file:
     <link href="tabs.css" rel="stylesheet" type="text/css">
     -->
-    <link href="makers.css" rel="stylesheet" type="text/css">
+    <!-- this is how you add CSS using the <style> tab: -->
     <style>
     body{
         margin:0;
