--- a/tabs-2.html
+++ b/tabs-2.html
@@ -7,6 +7,10 @@
     <title>tab navigation 2</title>
     <meta name="author" content="Luis Blackaller">
     <!-- Date: 2012-09-24 -->
+    <!-- this is how you link to an external CSS file:
+    <link href="tabs.css" rel="stylesheet" type="text/css">
+    -->
+    <!-- this is how you add CSS using the <style> tab:-->
     <style>
     body{
         margin:0;
