--- a/assignment-2.html
+++ b/assignment-2.html
@@ -57,7 +57,8 @@
                 
             <h2>Sample Code</h2>
             <p>
-                <a href="mondrian-1.html" target="blank">A simple Grid</a><br />
+                <a href="mondrian-1.html" target="blank">A simple grid</a><br />
+                <a href="positions.html" target="blank">CSS Position examples</a><br />
                 <a href="tabs-1.html" target="blank">A navigation bar</a><br />
             <p>
         </div>
