positions mini change

--- a/assignment-2.html
+++ b/assignment-2.html
@@ -58,7 +58,7 @@
             <h2>Sample Code</h2>
             <p>
                 <a href="mondrian-1.html" target="blank">A simple grid</a><br />
-                <a href="positions.html" target="blank">CSS Position examples</a><br />
+                <a href="positions.html" target="blank">CSS position examples</a><br />
                 <a href="tabs-1.html" target="blank">A navigation bar</a><br />
             <p>
         </div>
