--- a/positions.html
+++ b/positions.html
@@ -70,6 +70,9 @@
     </style>
 <body>
     <div id="wrapper">
+        <div class="fixed" style="padding:3px 5px; top:0px; left:100px;">
+            Resize the window ^_^
+        </div>
         <div class="fixed top-left">
             <div class="relative"></div>
             <div class="relative"></div>
