added alerts to tabs example

--- a/tabs-2.html
+++ b/tabs-2.html
@@ -82,8 +82,8 @@
             <li><a href="tabs-1.html">one</a></li>
             <li id="selected-tab"><a href="tabs-2.html" id="selected-link">two</a></li>
             <li><a href="tabs-3.html">three</a></li>
-            <li><a href="tabs-4.html">four</a></li>
-            <li><a href="tabs-5.html">five</a></li>
+            <li><a href="tabs-4.html" onclick="alert('nothing here yet');return(false);">four</a></li>
+            <li><a href="tabs-5.html" onclick="alert('nothing here yet');return(false);">five</a></li>
         </ul>
     </div>
     <div id="content-wrapper">
