fading slideshow template

--- a/assignment-3.html
+++ b/assignment-3.html
@@ -64,7 +64,10 @@
             <h2>Sample Code (more to come)</h2>
             <p>
                 <a href="JQueryUI-sortablegrid.html" target="blank">A sortable grid</a> - based on <a href="http://jqueryui.com/demos/sortable/#display-grid">this demo</a><br />
+                
                 <a href="JQueryUI-accordion.html" target="blank">An accordion template</a> - based on <a href="http://api.jquery.com/slideToggle/">this demo</a><br />
+
+                <a href="JQueryUI-slideshow.html" target="blank">An fading slideshow template</a> - based on <a href="http://jqueryui.com/demos/effect/">this demo</a><br />
             <p>
                 
             <h2>Readings</h2>
