swiping slideshow template

--- a/assignment-3.html
+++ b/assignment-3.html
@@ -68,6 +68,8 @@
                 <a href="JQueryUI-accordion.html" target="blank">An accordion template</a> - based on <a href="http://api.jquery.com/slideToggle/">this demo</a><br />
 
                 <a href="JQueryUI-slideshow.html" target="blank">An fading slideshow template</a> - based on <a href="http://jqueryui.com/demos/effect/">this demo</a><br />
+
+                <a href="JQueryUI-slideshow-2.html" target="blank">A swiping slideshow template</a> - based on <a href="http://docs.jquery.com/UI/Effects/Slide">the previous template and this demo</a><br />
             <p>
                 
             <h2>Readings</h2>
