small edits to slideshow templates

--- a/JQueryUI-slideshow-2.html
+++ b/JQueryUI-slideshow-2.html
@@ -73,12 +73,13 @@
     	</style>
         <script>
         var slideNames = new Array;
+
         slideNames[0] = "robota.png";
         slideNames[1] = "roboteeno.png";
         slideNames[2] = "roboteena.png";
         slideNames[3] = "robobaby.png";
         slideNames[4] = "robobabe.png";
-        visibleSlide = Math.floor((Math.random()*5));;
+        visibleSlide = Math.floor((Math.random()*5));
 
         function fillTheCarrousell(id, size){
 
