--- a/assignment-4.html
+++ b/assignment-4.html
@@ -48,7 +48,7 @@
 
             <h2>Assignment Due Date</h2>
             <p>
-                <span class="due-date">Web page: Monday, October 15th, 6:00pm.</span>
+                <span class="due-date">Index web page and improved Assignment 3: Monday, October 15th, 6:00pm.</span>
             <p>
             
             <h2>Resources</h2>
