--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		<h3>Lecturer <a href="http://blacklog.mitplw.com/" target="blank">Luis  Blackaller</a></h3>
 		
 		<p>
-			<a href="assignment-1.html">Assignment 1</a> - <a href="assignment-2.html">Assignment 2</a> - <a href="assignment-3.html">Assignment 3</a> - <a href="assignment-4.html">Assignment 4</a>
+			<a href="assignment-1.html">Assignment 1</a> - <a href="assignment-2.html">Assignment 2</a> - <a href="assignment-3.html">Assignment 3</a> - <a href="assignment-4.html">Assignment 4</a> - <a href="assignment-5.html">Assignment 5</a>
 		</p>
 
 		<p>
