--- a/assignment-5.html
+++ b/assignment-5.html
@@ -42,7 +42,7 @@
             </p>
         
             <p>
-                Choose an existing website of your liking. It can be anything from facebook to amazon, twitter or a tumblr blog you like. View the source code and run a comparative analysis between the website and the source. Based on this analysis, write a simple description of how you think the website works, and choose three attributes that you will change using the chrome developer toolkit. These changes should be inspired by something you wish the developers of your site of choice made different.
+                Choose an existing website of your liking. It can be anything from facebook to amazon, twitter, a tumblr blog you like, or anything else out there. View the source code and run a comparative analysis between the website and the source. Based on this analysis, write a simple description of how you think the website works, and choose three attributes that you will change using the chrome developer toolkit. These changes should be inspired by something you wish the developers of your site of choice made different.
             </p>
         
             <p>
