--- a/assignment-5.html
+++ b/assignment-5.html
@@ -45,7 +45,7 @@
                 Choose an existing website of your liking. It can be anything from facebook to amazon, twitter, a tumblr blog you like, or anything else out there.
             </p>
             <p>
-                You can use this assignment as research for your final project. Look at inspirational examples, figure out how they work, begin taking notes about what you might want to do.
+                <strong>You can use this assignment as research for your final project. Look at inspirational examples, figure out how they work, begin taking notes about what you might want to do.</strong>
             </p>
             <p>
                 View the source code and run a comparative analysis between the website and the source. Based on this analysis, write a simple description of how you think the website works, and choose three attributes that you will change using the chrome developer toolkit. These changes should be inspired by something you wish the developers of your site of choice made different.
