index and assignments edit

--- a/assignment-1.html
+++ b/assignment-1.html
@@ -35,8 +35,8 @@
     <div id="wrapper">
         <div id="assignment">
             <h2><a href="index.html">IML 400 Fall 2012</a></h2>
-            <h1>Assignment 1</h1>
-        
+            <h2>Assignment 1: History of the Web</h2>
+
             <p>
                 Research and 15 minute Presentation.<br />
                 Make a web page with the presentation content.
