--- a/assignment-2.html
+++ b/assignment-2.html
@@ -35,7 +35,7 @@
     <div id="wrapper">
         <div id="assignment">
             <h2><a href="index.html">IML 400 Fall 2012</a></h2>
-            <h1>Assignment 2</h1>
+            <h2>Assignment 2: HTML and CSS</h2>
         
             <p>
                 Individual assignment.
