--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         }
 
         ul li{
-            padding:0 0 0 30px;
+            padding:0 5px 0 5px;
         }
     </style>
 </head>
@@ -153,19 +153,19 @@
                 <h3>Assignments</h3>
                 <ul>
                     <li>
-                        <a href="assignment-1.html">Assignment 1</a>
+                        <a href="assignment-1.html">History of the Web</a>
                     </li>
                     <li>
-                        <a href="assignment-2.html">Assignment 2</a>
+                        <a href="assignment-2.html">Graphic Design</a> [Intro]
                     </li>
                     <li>
-                        <a href="assignment-3.html">Assignment 3</a>
+                        <a href="assignment-3.html">Interface Design</a> [Intro]
                     </li>
                     <li>
-                        <a href="assignment-4.html">Assignment 4</a>
+                        <a href="assignment-4.html">Landing Page Design</a>
                     </li>
                     <li>
-                        <a href="assignment-5.html">Assignment 5</a>
+                        <a href="assignment-5.html">Chrome Developer Tools</a>
                     </li>
                 </ul>
             </div>
