--- a/assignment-3.html
+++ b/assignment-3.html
@@ -35,7 +35,7 @@
     <div id="wrapper">
         <div id="assignment">
             <h2><a href="index.html">IML 400 Fall 2012</a></h2>
-            <h1>Assignment 3</h1>
+            <h2>Assignment 3: Javascript and JQuery</h2>
         
             <p>
                 Individual assignment.
@@ -57,8 +57,8 @@
             <h2>Resources</h2>
             <p> 
                 <a href="http://en.wikipedia.org/wiki/JavaScript" target="blank">Javascript History</a><br />
-                <a href="http://jquery.com/" target="blank">jQuery</a><br />
-                <a href="http://jqueryui.com/" target="blank">jQuery UI</a><br />
+                <a href="http://jquery.com/" target="blank">JQuery</a><br />
+                <a href="http://jqueryui.com/" target="blank">JQuery UI</a><br />
             <p>
                 
             <h2>Sample Code (more to come)</h2>
