index and assignments edit 2

--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
                         <a href="assignment-1.html">History of the Web</a>
                     </li>
                     <li>
-                        <a href="assignment-2.html">Graphic Design</a> [Intro]
+                        <a href="assignment-2.html">HTML and CSS</a>
                     </li>
                     <li>
-                        <a href="assignment-3.html">Interface Design</a> [Intro]
+                        <a href="assignment-3.html">Javascript and Jquery</a>
                     </li>
                     <li>
                         <a href="assignment-4.html">Landing Page Design</a>
