added more links to the index page

--- a/index.html
+++ b/index.html
@@ -174,8 +174,33 @@
                 <h3>Links</h3>
                 <ul>
                     <li>
-                        <a href="http://www.goodreads.com/review/list/2790197-black?shelf=iml-400">Recommended Sources</a>
+                        <a href="http://www.goodreads.com/review/list/2790197-black?shelf=iml-400">Recommended Books</a>
                     </li>
+                    <li>
+                		<a href="http://diveintohtml5.info/" target="blank">Dive into HTML5</a>
+                	</li>
+                    <li>
+                    	<a href="http://developers.google.com/chrome-developer-tools/" target="blank">Chrome Developer Tools</a>
+                    </li>
+                    <li>
+                		<a href="http://jquery.com/" target="blank">jQuery</a>
+                	</li>
+                    <li>
+                		<a href="http://jqueryui.com/" target="blank">jQuery UI</a>
+                	</li>
+                    <li>
+                		<a href="http://modernizr.com/" target="blank">Modernizr</a>
+                	</li>
+                    <li>
+                		<a href="http://twitter.github.com/bootstrap/" target="blank">Bootstrap</a>
+                	</li>
+                	<li>
+                		<a href="http://johnpolacek.github.com/scrollorama/" target="blank">Scrollarama</a>
+                	</li>
+                	<li>
+                		<a href="http://johnpolacek.github.com/superscrollorama/" target="blank">Superscrollarama</a>
+                	</li>
+
                 </ul>
             </div>
             
