add stallman to readings

--- a/assignment-5.html
+++ b/assignment-5.html
@@ -88,9 +88,11 @@
 
                 <a href="http://www.tnr.com/print/article/books/magazine/91916/google-schmidt-obama-gates-technocrats" target="blank">Evgeny Morozov: Don't be evil.</a><br />
 
-                <a href="http://www.jus.uio.no/sisu/free_culture.lawrence_lessig/portrait.pdf" target="blank">Lawrence Lessig: Free Culture (Preface and Intro).</a><br />
+                <a href="http://www.jus.uio.no/sisu/free_culture.lawrence_lessig/portrait.pdf" target="blank">Lawrence Lessig: Free Culture (Preface and Intro)</a><br />
 
-                <a href="http://futureoftheinternet.org/static/ZittrainTheFutureoftheInternet.pdf" target="blank">Jonathan Zittrain: The Future of the Internet (Battle of the Boxes and Battle of the Networks).</a><br />
+                <a href="http://futureoftheinternet.org/static/ZittrainTheFutureoftheInternet.pdf" target="blank">Jonathan Zittrain: The Future of the Internet (Battle of the Boxes and Battle of the Networks)</a><br />
+
+                <a href="http://www.gnu.org/philosophy/javascript-trap.html" target="blank">Richard Stallman: The JavaScript Trap</a><br />
 
             <p>
 
