--- a/index.html
+++ b/index.html
@@ -183,10 +183,16 @@
                     	<a href="http://developers.google.com/chrome-developer-tools/" target="blank">Chrome Developer Tools</a>
                     </li>
                     <li>
-                		<a href="http://jquery.com/" target="blank">jQuery</a>
+                		<a href="http://jquery.com/" target="blank">JQuery</a>
                 	</li>
                     <li>
-                		<a href="http://jqueryui.com/" target="blank">jQuery UI</a>
+                		<a href="http://jqueryui.com/" target="blank">JQuery UI</a>
+                	</li>
+                	<li>
+                		<a href="http://prototypejs.org/" target="blank">Prototype</a>
+                	</li>
+                	<li>
+                		<a href="http://script.aculo.us/" target="blank">Scriptaculous</a>
                 	</li>
                     <li>
                 		<a href="http://modernizr.com/" target="blank">Modernizr</a>
@@ -200,6 +206,10 @@
                 	<li>
                 		<a href="http://johnpolacek.github.com/superscrollorama/" target="blank">Superscrollarama</a>
                 	</li>
+                	<li>
+                		<a href="http://paperjs.org/" target="blank">Paper JS</a>
+                	</li>
+                	
 
                 </ul>
             </div>
