add more links to index

--- a/index.html
+++ b/index.html
@@ -201,6 +201,12 @@
                 		<a href="http://twitter.github.com/bootstrap/" target="blank">Bootstrap</a>
                 	</li>
                 	<li>
+                		<a href="http://angularjs.org/" target="blank">AngularJS</a>
+                	</li>
+                	<li>
+                		<a href="http://backbonejs.org/" target="blank">BackboneJS</a>
+                	</li>
+                	<li>
                 		<a href="http://johnpolacek.github.com/scrollorama/" target="blank">Scrollarama</a>
                 	</li>
                 	<li>
