edited maps example

--- a/map-bg/index.html
+++ b/map-bg/index.html
@@ -3,8 +3,8 @@
 
 <style>
 body{
-	color:#eee;
-	font-family:arial;
+	color: #eee;
+	font-family: Verdana, Geneva, sans-serif;
 	margin:0;
 }
 html, body {
@@ -13,7 +13,8 @@ html, body {
 h1{
 	text-align: center;
 	font-size:60px;
-	text-shadow: 0 0 0.8em rgba(255,255,255,0.8);
+	text-shadow: 0 00 0.5em rgba(255,255,255,0.8);
+	background:rgba(0,0,0,0.2);
 }
 #map {
 	position:absolute;
@@ -30,12 +31,12 @@ h1{
 	position:relative;
 	margin:auto;
 	padding:80px 0;
-	width:680px;
+	width:600px;
 
 }
 </style>
 
-<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=ABQIAAAAWnLlvmEmlhk3jhCi7FOf7hS8mOMkFTEl27TTAlW1pE8PPE4JvxQ-7ajiGt28IXeir6_m-_seAkn_0A" type="text/javascript"></script>
+<script src="http://maps.google.com/maps?file=api&amp;v=2&amp;key=AIzaSyBHCXWNRpOoGg7VR_w_Hl3TaTl8IVIcsJ0" type="text/javascript"></script>
 
 <script src="js/jquery-1.8.2.min.js" type="text/javascript" charset="utf-8"></script>
 
@@ -53,6 +54,9 @@ h1{
 	
 	<div id="wrapper">
 		<h1>Hello World</h1>
+		<!--
+		<img src="images/ojo.jpg" width="300px" height="300px" />
+		-->
 	</div>
 
 </body>
