moving things around

--- a/map-bg/index.html
+++ b/map-bg/index.html
@@ -40,7 +40,7 @@ h1{
 
 <script src="js/jquery-1.8.2.min.js" type="text/javascript" charset="utf-8"></script>
 
-<script src="js/global.js" type="text/javascript"></script>
+<script src="js/mapita.js" type="text/javascript"></script>
 
 <script src="js/jquery.lazyload.mini.js" type="text/javascript"></script>
 
