--- a/map-bg/index.html
+++ b/map-bg/index.html
@@ -15,6 +15,7 @@ h1{
 	font-size:60px;
 	text-shadow: 0 00 0.5em rgba(255,255,255,0.8);
 	background:rgba(0,0,0,0.2);
+	box-shadow: 0 00 0.5em rgba(0,0,0,0.2);
 }
 #map {
 	position:absolute;
