set location header

--- a/map-bg/index.html
+++ b/map-bg/index.html
@@ -32,7 +32,7 @@ h1{
 	position:relative;
 	margin:auto;
 	padding:80px 0;
-	width:600px;
+	width:800px;
 
 }
 </style>
@@ -54,7 +54,7 @@ h1{
 	<div id="map"></div>
 	
 	<div id="wrapper">
-		<h1>Hello World</h1>
+		<h1 id="map-location">Hello</h1>
 		<!--
 		<img src="images/ojo.jpg" width="300px" height="300px" />
 		-->
