--- a/map-bg/index.html
+++ b/map-bg/index.html
@@ -70,7 +70,7 @@ a:hover{
 	<div id="wrapper">
 		<div id="cabeza">
 			<h1 id="map-location">Hello</h1>
-			<h2><a href="#">Take me elsewhere</a></h2>
+			<h2><a href="#" onClick="window.location.reload()">Take me elsewhere</a></h2>
 			<!--
 			<img src="images/ojo.jpg" width="300px" height="300px" />
 			-->
