--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                         <a href="assignment-2.html">HTML and CSS</a>
                     </li>
                     <li>
-                        <a href="assignment-3.html">Javascript and Jquery</a>
+                        <a href="assignment-3.html">Javascript and JQuery</a>
                     </li>
                     <li>
                         <a href="assignment-4.html">Landing Page Design</a>
