--- a/index.html
+++ b/index.html
@@ -167,6 +167,9 @@
                     <li>
                         <a href="assignment-5.html">Chrome Developer Tools</a>
                     </li>
+                    <li>
+                        <a href="assignment-6.html">Content and Formats</a>
+                    </li>
                 </ul>
             </div>
             
