--- a/assignment-6.html
+++ b/assignment-6.html
@@ -56,16 +56,16 @@
                 Technology Startup. <a href="http://www.lytro.com/">Example</a>.
                 </li>
                 <li>
-                Official Movie Website. <a href="http://www.thehobbit.com/">Example</a>
+                Official Movie Website. <a href="http://www.thehobbit.com/">Example</a>.
                 </li>
                 <li>
-                Food Chain Website. <a href="http://www.mcdonalds.com/">Example</a>
+                Food Chain Website. <a href="http://www.mcdonalds.com/">Example</a>.
                 </li>
                 <li>
-                Online Magazine. <a href="http://www.technologyreview.com/">Example</a>
+                Online Magazine. <a href="http://www.technologyreview.com/">Example</a>.
                 </li>
                 <li>
-                University Website. <a href="http://mit.edu/">Example</a>
+                University Website. <a href="http://mit.edu/">Example</a>.
                 </li>
                 </ul>
             </p>
