--- a/assignment-6.html
+++ b/assignment-6.html
@@ -2,7 +2,11 @@
 	<title>IML 400 Fall 2012 Assignment 6</title>
     <style>
         body{
+            /*
+            font-family:courier;
+            */
             background: #222;
+            background: -webkit-radial-gradient(top, #333 0%, #000 100%); /* Chrome10+,Safari5.1+ */
             color:#ddd;
         }
         a{
@@ -71,7 +75,7 @@
             </p>
 
             <p>
-                Ask if you'd like to work with another category. Chances are it will be ok to do it.
+                Ask if you would like to work with another category. Chances are it will be ok to do it.
             </p>
 
             <h2>Assignment Due Date</h2>
