--- a/assignment-6.html
+++ b/assignment-6.html
@@ -39,7 +39,7 @@
     <div id="wrapper">
         <div id="assignment">
             <h2><a href="index.html">IML 400 Fall 2012</a></h2>
-            <h2>Assignment 6: </h2>
+            <h2>Assignment 6: Content and Formats</h2>
         
             <p>
                 Individual assignment.
