--- a/assignment-6.html
+++ b/assignment-6.html
@@ -6,7 +6,9 @@
             font-family:courier;
             */
             background: #222;
-            background: -webkit-radial-gradient(top, #333 0%, #000 100%); /* Chrome10+,Safari5.1+ */
+            /*
+            background: -webkit-radial-gradient(top, #333 0%, #000 100%);
+            */ /* Chrome10+,Safari5.1+ */
             color:#ddd;
         }
         a{
