--- a/assignment-6.html
+++ b/assignment-6.html
@@ -88,7 +88,7 @@
             <h2>Readings</h2>
             
             </p>
-                Pick up another text from the previous reading list, and write a simple webpage with some thoughts about your reading. Here is the list again:<br />
+                Pick up a text you havent read from this reading list, and write a simple webpage with some thoughts about your reading.<br />
             <p>
 
             <p>
