--- a/assignment-6.html
+++ b/assignment-6.html
@@ -25,7 +25,7 @@
     		color:gold;
     	}
         #wrapper{
-    		width: 600px;
+    		width: 560px;
     		margin:40px auto;
     	}
         #assignment{
@@ -92,17 +92,26 @@
             <p>
 
             <p>
-                <a href="http://www.wired.com/wired/archive/3.06/xanadu.html" target="blank">Ted Nelson and The Curse of Xanadu</a><br />
+                <ul>
 
-                <a href="readings/4chan-icwsm2011.pdf" target="blank">4chan and /b/: An Analysis of Anonymity and Ephemerality in a Large Online Community</a><br />
-
-                <a href="http://www.tnr.com/print/article/books/magazine/91916/google-schmidt-obama-gates-technocrats" target="blank">Evgeny Morozov: Don't be evil.</a><br />
-
-                <a href="http://www.jus.uio.no/sisu/free_culture.lawrence_lessig/portrait.pdf" target="blank">Lawrence Lessig: Free Culture (Preface and Intro)</a><br />
-
-                <a href="http://futureoftheinternet.org/static/ZittrainTheFutureoftheInternet.pdf" target="blank">Jonathan Zittrain: The Future of the Internet (Battle of the Boxes and Battle of the Networks)</a><br />
-
-                <a href="http://www.gnu.org/philosophy/javascript-trap.html" target="blank">Richard Stallman: The JavaScript Trap</a><br />
+                <li>
+                <a href="http://www.wired.com/wired/archive/3.06/xanadu.html" target="blank">Ted Nelson and The Curse of Xanadu</a>
+                </li>
+                <li>
+                <a href="readings/4chan-icwsm2011.pdf" target="blank">4chan and /b/: An Analysis of Anonymity and Ephemerality in a Large Online Community</a>
+                </li>
+                <li>
+                <a href="http://www.tnr.com/print/article/books/magazine/91916/google-schmidt-obama-gates-technocrats" target="blank">Evgeny Morozov: Don't be evil.</a>
+                </li>
+                <li>
+                <a href="http://www.jus.uio.no/sisu/free_culture.lawrence_lessig/portrait.pdf" target="blank">Lawrence Lessig: Free Culture (Preface and Intro)</a>
+                </li>
+                <li>
+                <a href="http://futureoftheinternet.org/static/ZittrainTheFutureoftheInternet.pdf" target="blank">Jonathan Zittrain: The Future of the Internet (Battle of the Boxes and Battle of the Networks)</a>
+                </li>
+                <li>
+                <a href="http://www.gnu.org/philosophy/javascript-trap.html" target="blank">Richard Stallman: The JavaScript Trap</a>
+                </ul>
 
             <p>
 
