--- a/assignment-6.html
+++ b/assignment-6.html
@@ -77,7 +77,9 @@
             </p>
 
             <p>
-                Ask if you would like to work with another category. Chances are it will be ok to do it.
+                <strong>
+                Ask if you would like to work with another category. Chances are it will be ok to do it, especially if this category is related with an idea for your final project.
+                </strong>
             </p>
 
             <h2>Assignment Due Date</h2>
