--- a/assignment-6.html
+++ b/assignment-6.html
@@ -78,7 +78,7 @@
 
             <p>
                 <strong>
-                    Ask if you would like to work with another category. Chances are it will be ok to do it, especially if this category is related to your final project.
+                    Ask if you would like to work with another category. Chances are it will be ok to do it, especially if this category is related to a possible final project.
                 </strong>
             </p>
 
