--- a/assignment-6.html
+++ b/assignment-6.html
@@ -48,7 +48,7 @@
             </p>
         
             <p>
-                Create a fake brand, institution or intellectual property, and design a landing page for their website. Choose from the categories listed below. Implement this page using HTML and CSS. Javascript is optional. Create all the fake content you will need to make it feel real. It is ok to parody and it is ok to simplify as long as the result looks real enough. Don't use the provided examples as a starting point. Use your imagination. You don't need to reference any real website, unless you deliberately intend to do so.
+                Create a fake brand, product, institution or intellectual property, and design a landing page for their website. Choose from the categories listed below. Implement this page using HTML and CSS. Javascript is optional. Create all the fake content you will need to make it feel real. It is ok to parody and it is ok to simplify as long as the result looks real enough. Don't use the provided examples as a starting point. Use your imagination. You don't need to reference any real website, unless you deliberately intend to do so.
             </p>
       
             <p><ul>
