assignment 7 first pass

--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
                     <li>
                         <a href="assignment-6.html">Content and Formats</a>
                     </li>
+                    <li>
+                        <a href="assignment-7.html">Final Project Concept</a>
+                    </li>
                 </ul>
             </div>
             
