--- a/assignment-7.html
+++ b/assignment-7.html
@@ -50,8 +50,8 @@
             </p>
 
             <p>
-                <h4>Final Project Proporsal Document</h4>
-                The proporsal document should be presented as a simple illustrated HTML webpage covering the following sections:
+                <h4>Final Project proposal Document</h4>
+                The proposal document should be presented as a simple illustrated HTML webpage covering the following sections:
                 <ul>
                     <li>Letter of intent</li> 
                     <li>Team (optional)</li>
@@ -80,12 +80,12 @@
 
             <p>
                 <h4>Scope</h4>
-                The project scope should warrantee the need to use rich media (text, images, video, etc), and an original, non-trivial implementation of presentation and interactivity using HTML5, CSS3, Javascript and JQuery. Viability of scope will require approval upon proporsal review.
+                The project scope should warrantee the need to use rich media (text, images, video, etc), and an original, non-trivial implementation of presentation and interactivity using HTML5, CSS3, Javascript and JQuery. Viability of scope will require approval upon proposal review.
             </p>
 
             <p>
                 <h4>Design</h4>
-                Draw a detailed flow diagram with wireframe pencil thumbnails on paper to outline a tentative sitemap, including a layout proporsal for all of the site's sections and interactive components. Ellaborate on tour design decisions; why are they necessary? how do they benefit the presentation of your content?
+                Draw a detailed flow diagram with wireframe pencil thumbnails on paper to outline a tentative sitemap, including a layout proposal for all of the site's sections and interactive components. Ellaborate on tour design decisions; why are they necessary? how do they benefit the presentation of your content?
             </p>
         
             <p>
