--- a/assignment-7.html
+++ b/assignment-7.html
@@ -50,7 +50,7 @@
             </p>
 
             <p>
-                <h4>Final Project proposal Document</h4>
+                <h4>Final Project Proposal Document</h4>
                 The proposal document should be presented as a simple illustrated HTML webpage covering the following sections:
                 <ul>
                     <li>Letter of intent</li> 
