--- a/assignment-7.html
+++ b/assignment-7.html
@@ -85,7 +85,7 @@
 
             <p>
                 <h4>Design</h4>
-                Draw a detailed flow diagram with wireframe pencil thumbnails on paper to outline a tentative sitemap, including a layout proposal for all of the site's sections and interactive components. Ellaborate on tour design decisions; why are they necessary? how do they benefit the presentation of your content?
+                Draw a detailed flow diagram with wireframe pencil thumbnails on paper to outline a tentative sitemap, including a layout proposal for all of the site's sections and interactive components. Explain your design decisions; why are they necessary? how do they benefit the presentation of your content?
             </p>
         
             <p>
