--- a/index.html
+++ b/index.html
@@ -173,6 +173,9 @@
                     <li>
                         <a href="assignment-7.html">Final Project Concept</a>
                     </li>
+                    <li>
+                        <a href="assignment-8.html">Final Project Pre-production</a>
+                    </li>
                 </ul>
             </div>
             
