--- a/index.html
+++ b/index.html
@@ -221,11 +221,16 @@
                 	<li>
                 		<a href="http://johnpolacek.github.com/superscrollorama/" target="blank">Superscrollarama</a>
                 	</li>
-                	<li>
-                		<a href="http://paperjs.org/" target="blank">Paper JS</a>
-                	</li>
-                	
+                    <li>
+                        <a href="http://paperjs.org/" target="blank">Paper JS</a>
+                    </li>
 
+                	<li>
+                		<a href="http://d3js.org/" target="blank">D3 JS</a>
+                	</li>
+                    <li>
+                        <a href="http://raphaeljs.com/" target="blank">Raphael JS</a>
+                    </li>
                 </ul>
             </div>
             
