--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         }
 
         #wrapper{
-            width: 600px;
+            width: 720px;
             margin:40px auto;
         }
         
@@ -176,6 +176,9 @@
                     <li>
                         <a href="assignment-8.html">Final Project Pre-production</a>
                     </li>
+                    <li>
+                        <a href="assignment-9.html">Final Project Landing Page</a>
+                    </li>
                 </ul>
             </div>
             
@@ -221,6 +224,10 @@
                 	<li>
                 		<a href="http://johnpolacek.github.com/superscrollorama/" target="blank">Superscrollarama</a>
                 	</li>
+                    <li>
+                        <a href="http://stolksdorf.github.com/Parallaxjs/" target="blank">Parallax JS</a>
+                    </li>
+
                     <li>
                         <a href="http://paperjs.org/" target="blank">Paper JS</a>
                     </li>
